--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -326,6 +326,17 @@
 \pagestyle{plain.scrheadings}
 
 %----------------------------------------------------------------------------------------
+% Boolean for twosided
+%----------------------------------------------------------------------------------------
+\RequirePackage{ifthen}
+\newboolean{twosided}   
+\if@twoside%
+\setboolean{twosided}{true}
+\else
+\setboolean{twosided}{false}
+\fi
+
+%----------------------------------------------------------------------------------------
 %	PARAGRAPH FORMATTING
 %----------------------------------------------------------------------------------------
 
