Rewrite definition of TFNP

--- a/content/toc.tex
+++ b/content/toc.tex
@@ -23,4 +23,9 @@
 
 \listoftables % Output the list of tables
 
+\let\cleardoublepage\bigskip
+\let\clearpage\bigskip
+
+\listofalgorithms %Output the list of algorithms
+
 \endgroup
