--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -26,6 +26,7 @@
 %Definition of the norm
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
+\newcommand{\length}[1]{\left\lvert#1\right\rvert}
 \newcommand{\normone}[1]{\left\lVert#1\right\rVert_{1}}
 \newcommand{\normtwo}[1]{\left\lVert#1\right\rVert_{2}}
 \newcommand{\norminf}[1]{\left\lVert#1\right\rVert_{\infty}}
@@ -37,10 +38,13 @@
 %Definition of complexity classes
 %Have the caracters be in Fira Sans Medium
 \renewcommand{\P}{\textbf{P}}
+\newcommand{\NP}{\textbf{NP}}
+\newcommand{\FP}{\textbf{FP}}
+\newcommand{\TNP}{\textbf{TNP}}
+\newcommand{\TFP}{\textbf{TFP}}
+\newcommand{\FNP}{\textbf{FNP}}
 \newcommand{\TFNP}{\textbf{TFNP}}
 \newcommand{\PLS}{\textbf{PLS}}
-\newcommand{\FNP}{\textbf{FNP}}
-\newcommand{\NP}{\textbf{NP}}
 \newcommand{\coNP}{\textbf{coNP}}
 \newcommand{\PSPACE}{\textbf{PSPACE}}
 \newcommand{\CLS}{\textbf{CLS}}
