--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{theorems}
+\ProvidesPackage{math_styling/theorems}
 
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
