--- a/styling/kaobiblio.sty
+++ b/styling/kaobiblio.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{kaobiblio}
+\ProvidesPackage{styling/kaobiblio}
 
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
