--- a/styling/kaorefs.sty
+++ b/styling/kaorefs.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{kaorefs}
+\ProvidesPackage{styling/kaorefs}
 
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
