Add colored headings

--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -1203,12 +1203,12 @@
 %----------------------------------------------------------------------------------------
 
 % Uncomment to have coloured headings
-%\addtokomafont{title}{\color{Maroon}}
-%\addtokomafont{part}{\color{Maroon}}
-%\addtokomafont{chapter}{\color{Maroon}}
-%\addtokomafont{section}{\color{Maroon}}
-%\addtokomafont{subsection}{\color{Maroon}}
-%\addtokomafont{subsubsection}{\color{Maroon}}
+\addtokomafont{title}{\color{Maroon}}
+\addtokomafont{part}{\color{Maroon}}
+\addtokomafont{chapter}{\color{Maroon}}
+\addtokomafont{section}{\color{Maroon}}
+\addtokomafont{subsection}{\color{Maroon}}
+\addtokomafont{subsubsection}{\color{Maroon}}
 %\addtokomafont{paragraph}{\color{Maroon}}
 %\addtokomafont{captionlabel}{\color{Blue}}
 %\addtokomafont{pagenumber}{\color{Maroon}}
