Attempt to fix warnings

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -235,7 +235,7 @@
 
 @inproceedings{daskalakis_continuous_2011,
 	title = {Continuous Local Search},
-	isbn = {978-0-89871-993-2 978-1-61197-308-2},
+	isbn = {978-0-89871-993-2},
 	url = {https://epubs.siam.org/doi/10.1137/1.9781611973082.62},
 	doi = {10.1137/1.9781611973082.62},
 	eventtitle = {Twenty-Second Annual {ACM}-{SIAM} Symposium on Discrete Algorithms},
