--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -1324,7 +1324,8 @@
 % Productivity
 \RequirePackage{pdfpages} % Insert PDF pages
 \RequirePackage{subfiles} % Adopt a modular structure
-\RequirePackage{todonotes} % Add useful notes in the margins
+%Deactivate todonotes to not have warnings.
+%\RequirePackage{todonotes} % Add useful notes in the margins 
 
 % Listings code
 \RequirePackage{listings} % Code
