--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -26,7 +26,7 @@
 \RequirePackage{afterpage} % Run commands after specific pages
 \RequirePackage{imakeidx} % For the index; must be loaded before the 'caption' and 'hyperref' packages
 \RequirePackage{varioref} % For the cross-references; must be loaded before the 'hyperref' and 'cleveref' packages
-\AtEndPreamble{\RequirePackage{scrhack}} % Make some packages compatible with KOMAScript
+\AtEndPreamble{\RequirePackage[listings=false]{scrhack}} % Make some packages compatible with KOMAScript
 
 % Define \Ifthispageodd (with a capital 'i') to make kaobook compatible with older KOMAScript versions
 \@ifpackagelater{scrbase}{2019/12/22}{%
@@ -904,8 +904,7 @@
 % Customise the list of listings
 \renewcommand{\lstlistlistingname}{List of Listings}% Change the title
 \newcommand{\lstlistingtocdepth}{\sectiontocdepth}% Set the depth
-\newcommand{\listoflistings}{\lstlistoflistings}% Provide the alias \listoflistings
-\newcommand{\listoflstlistings}{\lstlistoflistings}% Provide the alias \listoflstlistings
+
 
 % Define the style for toc entries
 \@ifpackagelater{scrbase}{2019/10/11}{%
@@ -1324,15 +1323,13 @@
 % Productivity
 \RequirePackage{pdfpages} % Insert PDF pages
 \RequirePackage{subfiles} % Adopt a modular structure
-%Deactivate todonotes to not have warnings.
-%\RequirePackage{todonotes} % Add useful notes in the margins 
+\RequirePackage{todonotes} % Add useful notes in the margins 
 
 % Listings code
 \RequirePackage{listings} % Code
-%\RequirePackage{minted} (must be loaded before scrhack)
+%\RequirePackage{minted} %(must be loaded before scrhack)
 
 % Configure the listings
-\definecolor{listingkeywords}{rgb}{0.0, 0.5, 0.0}
 \definecolor{listingidentifiers}{rgb}{0, 0, 0}
 \definecolor{listingcomments}{rgb}{0.25, 0.5, 0.5}
 \definecolor{listingstrings}{rgb}{0.73, 0.13, 0.13}
