Sebastian's Proofsreading part 5

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -524,3 +524,63 @@
 	keywords = {Computational complexity},
 	file = {Arora and Barak - 2009 - Computational complexity  a modern approach.pdf:/home/nils/Zotero/storage/QSHX6UP8/Arora and Barak - 2009 - Computational complexity  a modern approach.pdf:application/pdf},
 }
+
+@incollection{nielsen_relativization_1982,
+	location = {Berlin, Heidelberg},
+	title = {On relativization and the existence of complete sets},
+	volume = {140},
+	isbn = {978-3-540-11576-2},
+	url = {http://link.springer.com/10.1007/BFb0012797},
+	pages = {523--531},
+	booktitle = {Automata, Languages and Programming},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Sipser, Michael},
+	editor = {Nielsen, Mogens and Schmidt, Erik Meineche},
+	urldate = {2024-07-30},
+	date = {1982},
+	langid = {english},
+	doi = {10.1007/BFb0012797},
+	note = {Series Title: Lecture Notes in Computer Science},
+	file = {Sipser_Relativisation.pdf:/home/nils/Dropbox/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Sipser_Relativisation.pdf:application/pdf},
+}
+
+@article{chen_reducing_2023,
+	title = {Reducing Tarski to Unique Tarski (In the Black-Box Model)},
+	volume = {264},
+	rights = {Creative Commons Attribution 4.0 International license, info:eu-repo/semantics/{openAccess}},
+	issn = {1868-8969},
+	url = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CCC.2023.21},
+	doi = {10.4230/LIPICS.CCC.2023.21},
+	abstract = {We study the problem of finding a Tarski fixed point over the k-dimensional grid [n]{\textasciicircum}k. We give a black-box reduction from the Tarski problem to the same problem with an additional promise that the input function has a unique fixed point. It implies that the Tarski problem and the unique Tarski problem have exactly the same query complexity. Our reduction is based on a novel notion of partial-information functions which we use to fool algorithms for the unique Tarski problem as if they were working on a monotone function with a unique fixed point.},
+	pages = {21:1--21:23},
+	journaltitle = {{LIPIcs}, Volume 264, {CCC} 2023},
+	author = {Chen, Xi and Li, Yuhao and Yannakakis, Mihalis},
+	editora = {Ta-Shma, Amnon},
+	editoratype = {collaborator},
+	urldate = {2024-07-30},
+	date = {2023},
+	langid = {english},
+	note = {Artwork Size: 23 pages, 1766105 bytes
+{ISBN}: 9783959772822
+Medium: application/pdf
+Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+	keywords = {Query complexity, Tarski fixed point, {TFNP}, Theory of computation → Exact and approximate computation of equilibria, Theory of computation → Problems, reductions and completeness},
+	file = {Chen_tarski_to_unique_tarski.pdf:/home/nils/Dropbox/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Chen_tarski_to_unique_tarski.pdf:application/pdf},
+}
+
+@inproceedings{chen_improved_2022,
+	location = {Boulder {CO} {USA}},
+	title = {Improved Upper Bounds for Finding Tarski Fixed Points},
+	isbn = {978-1-4503-9150-4},
+	url = {https://dl.acm.org/doi/10.1145/3490486.3538297},
+	doi = {10.1145/3490486.3538297},
+	eventtitle = {{EC} '22: The 23rd {ACM} Conference on Economics and Computation},
+	pages = {1108--1118},
+	booktitle = {Proceedings of the 23rd {ACM} Conference on Economics and Computation},
+	publisher = {{ACM}},
+	author = {Chen, Xi and Li, Yuhao},
+	urldate = {2024-07-30},
+	date = {2022-07-12},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/KWCVCPIH/Chen and Li - 2022 - Improved Upper Bounds for Finding Tarski Fixed Poi.pdf:application/pdf},
+}
