Subsection about Applications of Taeski

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -584,3 +584,72 @@ Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
 	langid = {english},
 	file = {Submitted Version:/home/nils/Zotero/storage/KWCVCPIH/Chen and Li - 2022 - Improved Upper Bounds for Finding Tarski Fixed Poi.pdf:application/pdf},
 }
+
+@article{gartner_subexponential_2021,
+	title = {A subexponential algorithm for {ARRIVAL}},
+	rights = {Creative Commons Attribution 4.0 International, info:eu-repo/semantics/{openAccess}},
+	url = {http://hdl.handle.net/20.500.11850/507056},
+	doi = {10.3929/ETHZ-B-000507056},
+	pages = {14 p.},
+	author = {Gärtner, Bernd and Haslebacher, Sebastian and Hoang, Hung P.},
+	editora = {{Bansal, Nikhil} and {Merelli, Emanuela} and {Worrell, James}},
+	editoratype = {collaborator},
+	urldate = {2024-07-30},
+	date = {2021},
+	langid = {english},
+	note = {Artwork Size: 14 p.
+Medium: application/pdf
+Publisher: {ETH} Zurich},
+	keywords = {Graph games, Pseudorandom walks, Reachability, Switching systems},
+}
+
+@article{topkis_equilibrium_1979,
+	title = {Equilibrium Points in Nonzero-Sum \textit{n} -Person Submodular Games},
+	volume = {17},
+	issn = {0363-0129, 1095-7138},
+	url = {http://epubs.siam.org/doi/10.1137/0317054},
+	doi = {10.1137/0317054},
+	pages = {773--787},
+	number = {6},
+	journaltitle = {{SIAM} Journal on Control and Optimization},
+	shortjournal = {{SIAM} J. Control Optim.},
+	author = {Topkis, Donald M.},
+	urldate = {2024-07-31},
+	date = {1979-11},
+	langid = {english},
+	file = {Topkis - 1979 - Equilibrium Points in Nonzero-Sum n -Person.pdf:/home/nils/Zotero/storage/4Z6Q2AV2/Topkis - 1979 - Equilibrium Points in Nonzero-Sum n -Person.pdf:application/pdf},
+}
+
+@article{milgrom_rationalizability_1990,
+	title = {Rationalizability, Learning, and Equilibrium in Games with Strategic Complementarities},
+	volume = {58},
+	issn = {00129682},
+	url = {https://www.jstor.org/stable/2938316?origin=crossref},
+	doi = {10.2307/2938316},
+	pages = {1255},
+	number = {6},
+	journaltitle = {Econometrica},
+	shortjournal = {Econometrica},
+	author = {Milgrom, Paul and Roberts, John},
+	urldate = {2024-07-31},
+	date = {1990-11},
+	file = {Milgrom and Roberts - 1990 - Rationalizability, Learning, and Equilibrium in Ga.pdf:/home/nils/Zotero/storage/CDQALQH2/Milgrom and Roberts - 1990 - Rationalizability, Learning, and Equilibrium in Ga.pdf:application/pdf},
+}
+
+@article{condon_complexity_1992,
+	title = {The complexity of stochastic games},
+	volume = {96},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {08905401},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/089054019290048K},
+	doi = {10.1016/0890-5401(92)90048-K},
+	pages = {203--224},
+	number = {2},
+	journaltitle = {Information and Computation},
+	shortjournal = {Information and Computation},
+	author = {Condon, Anne},
+	urldate = {2024-07-31},
+	date = {1992-02},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/SY89Z3C5/Condon - 1992 - The complexity of stochastic games.pdf:application/pdf},
+}
