--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -59,6 +59,7 @@
 \newcommand{\Brouwer}{\textsc{Brouwer}}
 \newcommand{\EndOfPotentialLine}{\textsc{EndOfPotentialLine}}
 \newcommand{\EndOfLine}{\textsc{EndOfLine}}
+\newcommand{\Arrival}{\textsc{Arrival}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
 \newcommand{\bitstr}{\{0, 1\}}
