--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -50,6 +50,7 @@
 \newcommand{\CLS}{\textbf{CLS}}
 \newcommand{\EOPL}{\textbf{EOPL}}
 \newcommand{\PPAD}{\textbf{PPAD}}
+\newcommand{\PPADS}{\textbf{PPADS}}
 \newcommand{\SOL}{\textbf{SOL}}
 
 \newcommand{\Tarski}{\textsc{Tarski}}
