--- a/bibliography.bib
+++ b/bibliography.bib
@@ -653,3 +653,54 @@ Publisher: {ETH} Zurich},
 	langid = {english},
 	file = {Submitted Version:/home/nils/Zotero/storage/SY89Z3C5/Condon - 1992 - The complexity of stochastic games.pdf:application/pdf},
 }
+
+@article{beame_relative_1998,
+	title = {The Relative Complexity of {NP} Search Problems},
+	volume = {57},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022000098915756},
+	doi = {10.1006/jcss.1998.1575},
+	pages = {3--19},
+	number = {1},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Beame, Paul and Cook, Stephen and Edmonds, Jeff and Impagliazzo, Russell and Pitassi, Toniann},
+	urldate = {2024-08-05},
+	date = {1998-08},
+	langid = {english},
+	file = {Beame et al. - 1998 - The Relative Complexity of NP Search Problems.pdf:/home/nils/Zotero/storage/URIB55Y9/Beame et al. - 1998 - The Relative Complexity of NP Search Problems.pdf:application/pdf},
+}
+
+@inproceedings{papadimitriou_complexity_1990,
+	location = {Baltimore, Maryland, United States},
+	title = {On the complexity of local search},
+	isbn = {978-0-89791-361-4},
+	url = {http://portal.acm.org/citation.cfm?doid=100216.100274},
+	doi = {10.1145/100216.100274},
+	eventtitle = {the twenty-second annual {ACM} symposium},
+	pages = {438--445},
+	booktitle = {Proceedings of the twenty-second annual {ACM} symposium on Theory of computing  - {STOC} '90},
+	publisher = {{ACM} Press},
+	author = {Papadimitriou, C. H. and Schäffer, A. A. and Yannakakis, M.},
+	urldate = {2024-08-05},
+	date = {1990},
+	langid = {english},
+	file = {Full Text:/home/nils/Zotero/storage/APAXEB72/Papadimitriou et al. - 1990 - On the complexity of local search.pdf:application/pdf},
+}
+
+@inproceedings{papadimitriou_graph-theoretic_1990,
+	location = {St. Louis, {MO}, {USA}},
+	title = {On graph-theoretic lemmata and complexity classes},
+	isbn = {978-0-8186-2082-9},
+	url = {http://ieeexplore.ieee.org/document/89602/},
+	doi = {10.1109/FSCS.1990.89602},
+	eventtitle = {[1990] 31st Annual Symposium on Foundations of Computer Science},
+	pages = {794--801},
+	booktitle = {Proceedings [1990] 31st Annual Symposium on Foundations of Computer Science},
+	publisher = {{IEEE} Comput. Soc. Press},
+	author = {Papadimitriou, C.H.},
+	urldate = {2024-08-05},
+	date = {1990},
+	file = {Papadimitriou - 1990 - On graph-theoretic lemmata and complexity classes.pdf:/home/nils/Zotero/storage/L9MIR72G/Papadimitriou - 1990 - On graph-theoretic lemmata and complexity classes.pdf:application/pdf},
+}
