Start writing proof of consistent orientability

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -19,6 +19,10 @@
 \DeclareMathOperator{\sgnOp}{sgn}
 \newcommand{\sgn}[1]{\sgnOp\left(#1\right)}
 
+%Orient
+\DeclareMathOperator{\orient}{orient}
+\DeclareMathOperator{\indorient}{indorient}
+
 %Floor, ceil
 \newcommand{\floor}[1]{\left\lfloor#1\right\rfloor}
 \newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
