Fix Marginfigure referencing

--- a/preamble.tex
+++ b/preamble.tex
@@ -88,6 +88,11 @@
 	\import{./images/}{#1.pdf_tex}
 }
 
+\newcommand{\marginincfig}[1]{
+	\def\svgwidth{\marginparwidth}
+	\import{./images/}{#1.pdf_tex}
+}
+
 %New command for principles
 \newcommand{\principle}[1]{\begin{center}
 		``\textit{#1}''
