--- a/preamble.tex
+++ b/preamble.tex
@@ -101,26 +101,27 @@
 %Special marginnote for inside tcolorboxes
 \newlength{\marginparseptemp}
 \newcommand{\boxmarginnote}[1]{
+	\leavevmode
 	%Check if we are in twosided mode
 	\ifthenelse{\boolean{twosided}}{
 		%We are in two sided mode
 		\Ifthispageodd{
 			\setlength{\marginparseptemp}{\marginparsep-\theoremboxmargin}
 			\marginparsep=\marginparseptemp
-			\marginnote[-\baselineskip]{#1}\hspace{-10pt}
+			\marginnote[-\baselineskip]{#1}
 			\setlength{\marginparseptemp}{\marginparsep+\theoremboxmargin}
 			\marginparsep=\marginparseptemp
 		}{
 			\setlength{\marginparseptemp}{\marginparsep+\theoremboxmargin}
 			\marginparsep=\marginparseptemp
-			\marginnote[-\baselineskip]{#1}\hspace{-10pt}
+			\marginnote[-\baselineskip]{#1}
 			\setlength{\marginparseptemp}{\marginparsep-\theoremboxmargin}
 			\marginparsep=\marginparseptemp
 		}
 	}{
 		\setlength{\marginparseptemp}{\marginparsep-\theoremboxmargin}
 		\marginparsep=\marginparseptemp
-		\marginnote[-\baselineskip]{#1}\hspace{-10pt}
+		\marginnote[-\baselineskip]{#1}
 		\setlength{\marginparseptemp}{\marginparsep+\theoremboxmargin}
 		\marginparsep=\marginparseptemp
 	}
