--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -83,7 +83,8 @@
 	borderline west={2pt}{0pt}{gray},
 	coltitle=blue,
 	colback=white,
-	sharp corners
+	sharp corners,
+	parbox=false %Makes parskip correct again.
 }
 
 
