Add promise variants of Tarski

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -59,6 +59,8 @@
 
 \newcommand{\Tarski}{\textsc{Tarski}}
 \newcommand{\Tarskistar}{\textsc{Tarski*}}
+\newcommand{\UniqueTarski}{\textsc{UniqueTarski}}
+\newcommand{\SuperUniqueTarski}{\textsc{SuperUniqueTarski}}
 \newcommand{\Localopt}{\textsc{Localopt}}
 \newcommand{\Sperner}{\textsc{Sperner}}
 \newcommand{\Brouwer}{\textsc{Brouwer}}
