--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -89,6 +89,7 @@
 \newcommand{\ftilde}{\widetilde{f}}
 \newcommand{\Ctilde}{\widetilde{C}}
 \newcommand{\Ltilde}{\widetilde{L}}
+\newcommand{\xtilde}{\widetilde{x}}
 
 %Algorithm macros
 %LET macro
