Add new chapter about difficulty of chaining results

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -53,6 +53,7 @@
 \newcommand{\PSPACE}{\textbf{PSPACE}}
 \newcommand{\CLS}{\textbf{CLS}}
 \newcommand{\EOPL}{\textbf{EOPL}}
+\newcommand{\SOPL}{\textbf{SOPL}}
 \newcommand{\PPAD}{\textbf{PPAD}}
 \newcommand{\PPADS}{\textbf{PPADS}}
 \newcommand{\SOL}{\textbf{SOL}}
