Try to fix font issue

--- a/preamble.tex
+++ b/preamble.tex
@@ -56,7 +56,7 @@
 	BoldItalicFont = Fira Sans Italic
 ]{Fira Sans Light}
 %\setsansfont[Ligatures=TeX]{Fira Sans}
-\setmonofont[Ligatures=TeX]{Fira Mono}
+\setmonofont[Ligatures=TeX]{Fira Mono Regular}
 %Fix missing characters
 \newunicodechar{∩}{\ensuremath{\cap}}
 
