Try to fix the font problem

--- a/preamble.tex
+++ b/preamble.tex
@@ -56,7 +56,7 @@
 	BoldItalicFont = Fira Sans Italic
 ]{Fira Sans Light}
 %\setsansfont[Ligatures=TeX]{Fira Sans}
-\setmonofont[Contextuals={Alternate}]{Fira Code}
+\setmonofont[Ligatures=TeX]{Fira Code}
 %Fix missing characters
 \newunicodechar{∩}{\ensuremath{\cap}}
 
