--- a/bibliography.bib
+++ b/bibliography.bib
@@ -704,3 +704,28 @@ Publisher: {ETH} Zurich},
 	date = {1990},
 	file = {Papadimitriou - 1990 - On graph-theoretic lemmata and complexity classes.pdf:/home/nils/Zotero/storage/L9MIR72G/Papadimitriou - 1990 - On graph-theoretic lemmata and complexity classes.pdf:application/pdf},
 }
+
+@article{arteche_proof_2024,
+	title = {From Proof Complexity to Circuit Complexity via Interactive Protocols},
+	volume = {297},
+	rights = {Creative Commons Attribution 4.0 International license, info:eu-repo/semantics/{openAccess}},
+	issn = {1868-8969},
+	url = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ICALP.2024.12},
+	doi = {10.4230/LIPICS.ICALP.2024.12},
+	abstract = {Folklore in complexity theory suspects that circuit lower bounds against {NC}¹ or P/poly, currently out of reach, are a necessary step towards proving strong proof complexity lower bounds for systems like Frege or Extended Frege. Establishing such a connection formally, however, is already daunting, as it would imply the breakthrough separation {NEXP} ⊈ P/poly, as recently observed by Pich and Santhanam [Pich and Santhanam, 2023]. 
+We show such a connection conditionally for the Implicit Extended Frege proof system ({iEF}) introduced by Krajíček [Krajíček, 2004], capable of formalizing most of contemporary complexity theory. In particular, we show that if {iEF} proves efficiently the standard derandomization assumption that a concrete Boolean function is hard on average for subexponential-size circuits, then any superpolynomial lower bound on the length of {iEF} proofs implies \#P ⊈ {FP}/poly (which would in turn imply, for example, {PSPACE} ⊈ P/poly). Our proof exploits the formalization inside {iEF} of the soundness of the sum-check protocol of Lund, Fortnow, Karloff, and Nisan [Lund et al., 1992]. This has consequences for the self-provability of circuit upper bounds in {iEF}. Interestingly, further improving our result seems to require progress in constructing interactive proof systems with more efficient provers.},
+	pages = {12:1--12:20},
+	journaltitle = {{LIPIcs}, Volume 297, {ICALP} 2024},
+	author = {Arteche, Noel and Khaniki, Erfan and Pich, Ján and Santhanam, Rahul},
+	editora = {Bringmann, Karl and Grohe, Martin and Puppis, Gabriele and Svensson, Ola},
+	editoratype = {collaborator},
+	urldate = {2024-08-30},
+	date = {2024},
+	langid = {english},
+	note = {Artwork Size: 20 pages, 920214 bytes
+{ISBN}: 9783959773225
+Medium: application/pdf
+Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+	keywords = {circuit complexity, interactive protocols, proof complexity, Theory of computation → Circuit complexity, Theory of computation → Complexity theory and logic, Theory of computation → Proof complexity},
+	file = {Arteche_Proof_Complexity:/home/nils/Dropbox/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Arteche_Proof_Complexity.pdf:application/pdf},
+}
