--- a/preamble.tex
+++ b/preamble.tex
@@ -52,7 +52,7 @@
 	% UprightFont = ,
 	ItalicFont = Fira Sans Light Italic,
 	% SmallCapsFont = ,
-	BoldFont = Fira Sans Regular,
+	BoldFont = Fira Sans,
 	BoldItalicFont = Fira Sans Italic
 ]{Fira Sans Light}
 %\setsansfont[Ligatures=TeX]{Fira Sans}
