--- a/preamble.tex
+++ b/preamble.tex
@@ -87,6 +87,11 @@
 	\import{./images/}{#1.pdf_tex}
 }
 
+\newcommand{\incfigwide}[1]{%
+	\def\svgwidth{\textwidth + \marginparsep + \marginparwidth}
+	\import{./images/}{#1.pdf_tex}
+}
+
 \newcommand{\marginincfig}[1]{
 	\def\svgwidth{\marginparwidth}
 	\import{./images/}{#1.pdf_tex}
